--- a/locale/zh-cn/LC_MESSAGES/django.po
+++ b/locale/zh-cn/LC_MESSAGES/django.po
@@ -2,20 +2,20 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-08 22:13+0800\n"
+"POT-Creation-Date: 2014-05-08 23:54+0800\n"
 "PO-Revision-Date: 2014-05-08 22:13+0806\n"
 "Last-Translator:   <lushizhao@qq.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "X-Translated-Using: django-rosetta 0.7.4\n"
 
 #: banner/models.py:5
@@ -54,11 +54,11 @@ msgstr ""
 msgid "Lookbook"
 msgstr ""
 
-#: minibobi/local_settings.py:112 minibobi/settings.py:111
+#: minibobi/local_settings.py:112 minibobi/settings.py:113
 msgid "简体中文"
 msgstr ""
 
-#: minibobi/local_settings.py:113 minibobi/settings.py:112
+#: minibobi/local_settings.py:113 minibobi/settings.py:114
 msgid "English"
 msgstr ""
 
@@ -267,8 +267,7 @@ msgid "Page Title"
 msgstr ""
 
 #: product/models.py:101
-msgid ""
-"Overwrites what is displayed at the top of your browser or in bookmarks"
+msgid "Overwrites what is displayed at the top of your browser or in bookmarks"
 msgstr ""
 
 #: product/models.py:102
@@ -294,6 +293,10 @@ msgstr ""
 #: product/models.py:154
 msgid "Set this image to product cover?"
 msgstr ""
+
+#: templates/base.html:40
+msgid "CALL US AT"
+msgstr "拨打电话"
 
 #: templates/base.html:62
 msgid "GIRLS"
